--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,7 +4,12 @@
   <h1 class="text-center">Edit Campground</h1>
   <!-- 가운데 정렬 -->
   <div class="col-6 offset-3">
-    <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
+    <form
+      action="/campgrounds/<%=campground._id%>?_method=PUT"
+      method="POST"
+      novalidate
+      class="validated-form"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -13,7 +18,9 @@
           id="title"
           name="campground[title]"
           value="<%=campground.title%>"
+          required
         />
+        <div class="valid-feedback">좋아요!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -23,7 +30,9 @@
           id="location"
           name="campground[location]"
           value="<%=campground.location%>"
+          required
         />
+        <div class="valid-feedback">좋아요!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
@@ -33,7 +42,9 @@
           id="imaage"
           name="campground[image]"
           value="<%=campground.image%>"
+          required
         />
+        <div class="valid-feedback">좋아요!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
@@ -49,7 +60,9 @@
             aria-describedby="price-label"
             name="campground[price]"
             value="<%=campground.price%>"
+            required
           />
+          <div class="valid-feedback">좋아요!</div>
         </div>
       </div>
 
@@ -59,11 +72,14 @@
           class="form-control"
           id="description"
           name="campground[description]"
+          required
           rows="3"
         >
+
  
           <%=campground.description %></textarea
         >
+        <div class="valid-feedback">좋아요!</div>
       </div>
       <div class="mb-3">
         <button class="btn btn-primary">Update Campground</button>
