--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
   <h1 class="text-center">New Campground</h1>
   <!-- 가운데 정렬 -->
   <div class="col-6 offset-3">
-    <form action="/campgrounds" method="POST">
+    <form action="/campgrounds" method="POST" class="validated-form" novalidate>
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <input
@@ -11,7 +11,9 @@
           type="text"
           id="title"
           name="campground[title]"
+          required
         />
+        <div class="valid-feedback">좋아요!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
@@ -20,7 +22,9 @@
           type="text"
           id="location"
           name="campground[location]"
+          required
         />
+        <div class="valid-feedback">좋아요!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
@@ -29,7 +33,9 @@
           type="text"
           id="imaage"
           name="campground[image]"
+          required
         />
+        <div class="valid-feedback">좋아요!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
@@ -44,14 +50,23 @@
             aria-label="price"
             aria-describedby="price-label"
             name="campground[price]"
+            required
           />
+          <div class="valid-feedback">좋아요!</div>
         </div>
       </div>
 
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
-        <textarea class="form-control" id="description" rows="3"></textarea>
+        <textarea
+          class="form-control"
+          id="description"
+          rows="3"
+          required
+        ></textarea>
       </div>
+      <div class="valid-feedback">좋아요!</div>
+
       <div class="mb-3">
         <button class="btn btn-success">Add Campground</button>
       </div>
