--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -62,6 +62,7 @@
           class="form-control"
           id="description"
           rows="3"
+          name="campground[description]"
           required
         ></textarea>
       </div>
