--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,12 +12,48 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div
+      class="collapse navbar-collapse justify-content-between"
+      id="navbarNavAltMarkup"
+    >
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Campgrounds">Campground</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Campgrounds/new">New Campground</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <% if(!currentUser) {%>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Sign Up </a>
+        </li>
+        <%} else {%>
+        <li>
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+        <%} %>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/Campgrounds">Campground</a>
         <a class="nav-link" href="/Campgrounds/new">New Campground</a>
       </div>
-    </div>
-  </div>
-</nav>
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/register">Sing up </a>
+        <a class="nav-link" href="/logout">Logout</a>
+      </div>
+    </div> -->
