--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,8 +10,12 @@
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item text-muted"><%=campground.location %></li>
+        <li class="list-group-item">
+          Submitted by <%=campground.author.username %>
+        </li>
         <li class="list-group-item">$ <%=campground.price %>/night</li>
       </ul>
+      <% if(currentUser && campground.author.equals(currentUser._id)) {%>
       <div class="card-body">
         <a
           class="card-link btn btn-info"
@@ -28,12 +32,14 @@
           <button class="btn btn-primary">Delete</button>
         </form>
       </div>
+      <% } %>
       <div class="card-footer text-muted">
         <a href="/campgrounds">All Campgrounds</a>
       </div>
     </div>
   </div>
   <div class="col-6">
+    <% if(currentUser) { %>
     <h2>Leave a Review</h2>
     <form
       action="/campgrounds/<%=campground._id%>/reviews"
@@ -66,17 +72,22 @@
       <div class="valid-feedback">좋아요!</div>
       <button class="btn btn-success">Submit</button>
     </form>
-    <% for(let review of campground.reviews ) {%>
+    <% } %> <% for(let review of campground.reviews ) {%>
     <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary mt-3">
+          By <%= review.author.username%>
+        </h6>
         <p class="card-text">Review:<%= review.body %></p>
+        <% if(currentUser && review.author.equals(currentUser._id)) {%>
         <form
           action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE"
           method="POST"
         >
           <button class="btn btn-sm btn-danger">Delete</button>
         </form>
+        <%}%>
       </div>
     </div>
 
