--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -9,6 +9,7 @@
       method="POST"
       novalidate
       class="validated-form"
+      enctype="multipart/form-data"
     >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
@@ -34,18 +35,7 @@
         />
         <div class="valid-feedback">좋아요!</div>
       </div>
-      <div class="mb-3">
-        <label class="form-label" for="image">Image Url</label>
-        <input
-          class="form-control"
-          type="text"
-          id="imaage"
-          name="campground[image]"
-          value="<%=campground.image%>"
-          required
-        />
-        <div class="valid-feedback">좋아요!</div>
-      </div>
+
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
 
@@ -80,7 +70,33 @@
           <%=campground.description %></textarea
         >
         <div class="valid-feedback">좋아요!</div>
+        <div class="mb-3 custom-file">
+          <label for="image" class="form-label">Image</label>
+          <input
+            class="form-control custom-file-label"
+            type="file"
+            id="image"
+            name="image"
+            multiple
+          />
+        </div>
       </div>
+
+      <div class="mb-3">
+        <% campground.images.forEach(function(img,i) {%>
+        <img src="<%=img.thumbnail %>" class="img-thumbnail" alt="" />
+        <div class="form-check-inline">
+          <input
+            type="checkbox"
+            id="image-<%=i%>"
+            name="deleteImages[]"
+            value="<%=img.filename%>"
+          />
+        </div>
+        <label for="image-<%=i%>">Delete</label>
+        <% }) %>
+      </div>
+
       <div class="mb-3">
         <button class="btn btn-primary">Update Campground</button>
       </div>
