--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <!-- 가운데 정렬 -->
-  <div class="col-6 offset-3">
+  <div class="col-md-6 offset-md-3">
     <form
       action="/campgrounds/<%=campground._id%>?_method=PUT"
       method="POST"
