--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>YelpCamp</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="/stylesheets/home.css" />
   </head>
-  <body>
-    <h1>HOME ! YELP CAMP</h1>
+  <body class="d-flex text-center text-white bg-dark">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="mb-auto">
+        <div>
+          <h1 class="float-md-left mb-0">YelpCamp</h1>
+
+          <nav class="nav nav-masthead justify-content-center float-md-right">
+            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            <a class="nav-link" href="/campgrounds">Campgrounds</a>
+            <% if(!currentUser) {%>
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/register">Register</a>
+            <% } else {%>
+            <a class="nav-link" href="/logout">Logout</a>
+            <% }%>
+          </nav>
+        </div>
+      </header>
+      <main class="px-3">
+        <div class="mb-5">
+          <p class="lead">
+            Welcome to YelpCamp! <br />
+            where you can embark on an unforgettable camping adventure and
+            discover your perfect camping experience. Our website is your
+            one-stop-shop for all things camping, featuring detailed reviews,
+            ratings, and photos of campsites from all around the world. Whether
+            you're a seasoned outdoor enthusiast or new to the camping scene,
+            YelpCamp offers a wealth of information to help you plan your next
+            camping trip. So, start exploring today and let us help you find
+            your ideal camping destination.
+          </p>
+        </div>
+
+        <a
+          href="/campgrounds"
+          class="btn btn-lg btn-secondary font-weight-bold text-white"
+          >View Campgrounds</a
+        >
+      </main>
+      <footer class="mt-auto text-white-50">
+        <p>YelpCamp</p>
+      </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+    <script src="/javascripts/validateForms.js"></script>
   </body>
 </html>
