--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -15,10 +15,11 @@
       href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/stylesheets/app.css" />
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar.ejs')%>
-    <main class="container mt-5">
+    <main class="container mt-3">
       <%- include('../partials/flash')%> <%- body %>
     </main>
     <%- include('../partials/footer.ejs')%>
